# AIE-Certification-Challenge

./: .gitignore  README.md  agent.py  copy.md  main.py  pyproject.toml  test.py
api/: index.py
debug/: legacy_fixed_rag.py
evals/: evals.ipynb
evals/results/: baseline_per_question_run_today.csv  hybrid_per_question_run_today.csv  metrics_comparison_table.csv  metrics_summary.json
frontend/: package-lock.json  package.json  tsconfig.json
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: page.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: layout.tsx  page.tsx
tests/: test_agentic_pipeline.py  test_regression.py
