[project]
name = "aie-certification-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=1.0.0",
    "langchain-experimental>=0.3.4",
    "langchain-cohere>=0.5.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=0.3.7",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.4.0,<0.5.0",
    "langchain-qdrant>=0.2.0",
    "langsmith>=0.2.0",
    "langgraph>=0.3.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "ragas==0.2.10",
    "rapidfuzz>=3.0.0",
    "nest-asyncio>=1.6.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "pypdf>=6.7.5",
]
